# Transformer-Translator

./: .gitignore  Encoder.py  README.md  Transformer.py  TranslatorEn2Es.ipynb  dataset.py  model.ipynb  pyproject.toml  tokenizer.py  training.ipynb  training_colab.ipynb  vocabulario.json
notebooks/: Translator.ipynb  dataset.ipynb  results.ipynb  tokenizer.ipynb  training.ipynb  training_colab.ipynb
src/: config.py  data.py  infer.py  train.py  transformer.py
src/transformer/: dataset.py  transformer.py
vocabulario/: vocab_16k.json
